whoami/app-test-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: argocd
spec:
  entryPoints:
    - whoami
  routes:
    - kind: Rule
      match: PathPrefix(`/dashboard`)
      services:
      - name: whoami
        port: 80
