whoami/whoami-ingressroute-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-web
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/whoami`)
      services:
      - kind: Service
        name: whoami
        port: 80
  tls : 
      certResolver :  lol
