whoami/whoami-ingressroute-websecure.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-websecure
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: PathPrefix(`/whoami`)
      services:
      - kind: Service
        name: whoami
        port: 80
  tls : 
      certResolver : lol
